--- a/charts/dingtalk-bot/templates/serviceaccount.yaml
+++ b/charts/dingtalk-bot/templates/serviceaccount.yaml
@@ -3,11 +3,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "dingtalk-bot.serviceAccountName" . }}
+  namespace: {{ include "common.names.namespace" . | quote }}
   labels:
     {{- include "common.labels.standard" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
 {{- end }}
