feat: update dingtalk-bot chart.

--- a/charts/dingtalk-bot/templates/secret.yaml
+++ b/charts/dingtalk-bot/templates/secret.yaml
@@ -1,6 +1,3 @@
-{{ include "common.validations.values.single.empty" (dict "valueKey" "config.argoWorkflows.domain1" "context" $) }}
-{{ include "common.validations.values.single.empty" (dict "valueKey" "config.argoWorkflows.token" "context" $) }}
-{{ include "common.validations.values.single.empty" (dict "valueKey" "config.argoWorkflows.workerNamespace" "context" $) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,14 +16,14 @@ metadata:
 type: Opaque
 data:
   {{- with .Values.config.argoWorkflows }}
-  ARGO_WORKFLOWS_DOMAIN: {{ .domain | b64enc | quote }}
-  ARGO_WORKFLOWS_TOKEN: {{ .token | b64enc | quote }}
-  ARGO_WORKFLOWS_WORKER_NAMESPACE: {{ .workerNamespace | b64enc | quote }}
+  ARGO_WORKFLOWS_DOMAIN: {{ required "config.argoWorkflows.domain is required!" .domain | b64enc | quote }}
+  ARGO_WORKFLOWS_TOKEN: {{ required "config.argoWorkflows.token is required!" .token | b64enc | quote }}
+  ARGO_WORKFLOWS_WORKER_NAMESPACE: {{ required "config.argoWorkflows.workerNamespace is required!" .workerNamespace | b64enc | quote }}
   {{- end }}
 
   {{- with .Values.config.dingTalk }}
-  DINGTALK_CLIENT_ID: {{ .clientId | b64enc | quote }}
-  DINGTALK_CLIENT_SECRET: {{ .clientSecret | b64enc | quote }}
-  DINGTALK_ROBOT_CODE: {{ .robotCode | b64enc | quote }}
+  DINGTALK_CLIENT_ID: {{ required "config.dingTalk.clientId is required!" .clientId | b64enc | quote }}
+  DINGTALK_CLIENT_SECRET: {{ required "config.dingTalk.clientSecret is required!" .clientSecret | b64enc | quote }}
+  DINGTALK_ROBOT_CODE: {{ required "config.dingTalk.robotCode is required!" .robotCode | b64enc | quote }}
   {{- end }}
 
