--- a/charts/dingtalk-bot/values.yaml
+++ b/charts/dingtalk-bot/values.yaml
@@ -432,17 +432,45 @@ volumeMounts: []
 
 
 redis:
+  ## @param redis.enabled Enable redis service
+  ##
   enabled: true
 
   replica:
     replicaCount: 0
 
+  auth:
+    ## @param redis.auth.enabled Enable password authentication
+    ##
+    enabled: true
+    ## @param redis.auth.password Redis(R) password
+    ## Defaults to a random 10-character alphanumeric string if not set
+    ##
+    password: "xxxx"
+    ## @param redis.auth.existingSecret The name of an existing secret with Redis(R) credentials
+    ## NOTE: When it's set, the previous `auth.password` parameter is ignored
+    ##
+    existingSecret: ""
+    ## @param redis.auth.existingSecretPasswordKey Password key to be retrieved from existing secret
+    ## NOTE: ignored unless `auth.existingSecret` parameter is set
+    ##
+    existingSecretPasswordKey: ""
 
 redisExternal:
+  ## @param redisExternal.enabled Enable external redis
+  ##
   enabled: flase
+  ## @param redisExternal.redisHost Set redis host
+  ##
   redisHost: "127.0.0.1"
+  ## @param redisExternal.redisPort Set redis port
+  ##
   redisPort: 6379
+  ## @param redisExternal.redisPassword Set redis auth password
+  ##
   redisPassword: "password"
+  ## @param redisExternal.redisDatabase Set redis db id
+  ##
   redisDatabase: 1
 
 
