--- a/charts/cloudeye-exporter/values.yaml
+++ b/charts/cloudeye-exporter/values.yaml
@@ -489,7 +489,7 @@ startupProbe:
 ## @param livenessProbe.successThreshold Success threshold for livenessProbe
 ##
 livenessProbe:
-  enabled: true
+  enabled: false
   initialDelaySeconds: 20
   periodSeconds: 10
   timeoutSeconds: 3
@@ -503,7 +503,7 @@ livenessProbe:
 ## @param readinessProbe.successThreshold Success threshold for readinessProbe
 ##
 readinessProbe:
-  enabled: true
+  enabled: false
   initialDelaySeconds: 20
   periodSeconds: 10
   timeoutSeconds: 5
