--- a/charts/cloudeye-exporter/templates/deployment.yaml
+++ b/charts/cloudeye-exporter/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     metadata:
       annotations:
         {{- if .Values.secretChecksumAnnotations }}
-        checksum/secret: {{ pick ( include (print $.Template.BasePath "/secret.yaml") . | fromYaml ) "data" | toYaml | sha256sum }}
+        checksum/secret: {{ pick ( include (print $.Template.BasePath "/secret.yaml") . | fromYaml ) "stringData" | toYaml | sha256sum }}
         {{- end }}
       labels:
         {{- include "common.labels.standard" . | nindent 8 }}
